--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -138,9 +138,71 @@ body.is_scrolled .menu-wrapper {
   cursor: pointer;
 }
 
+.header-info .footer-img__group a svg {
+  transform: scale(1);
+  transition: transform 0.2s;
+}
+
+.header-info .footer-img__group a:hover svg {
+  transform: scale(1.2);
+}
+
 .search-btn__wrapper {
   width: 40px;
   height: 40px;
+  border: 1px solid #d9d9d9;
+  overflow: hidden;
+  position: relative;
+  transition: background-color 0.2s;
+  margin-left: -1px;
+}
+
+.search-btn__wrapper a {
+  transform: scale(1);
+  transition: transform 0.2s;
+}
+
+.search-btn__wrapper a:hover {
+  transform: scale(1.2);
+}
+
+.search-btn__wrapper.get-click svg {
+  color: #333;
+}
+
+.header-btn__sale svg {
+  left: 0;
+  color: #fff;
+  bottom: 0;
+  z-index: 1;
+  position: absolute;
+}
+
+.header-btn__btn {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  background: #333;
+  transition: background-color 0.3s;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-btn__btn:hover {
+  color: #fff;
+  background: #4b4b4b;
+}
+
+.header-btn__callback {
+  outline: 1px solid #d9d9d9;
+  outline-offset: 4px;
+}
+
+.header-btn__callback:hover {
+  animation: hoverWave linear 1s infinite;
 }
 
 .mobile-icon,
@@ -188,6 +250,15 @@ body.is_scrolled .menu-wrapper {
 
 .header .social {
   align-items: center;
+}
+
+.header-search__icon svg {
+  color: #FFC700;
+  transition: color 0.3s;
+}
+
+.header-search__icon:hover svg {
+  color: #fff;
 }
 
 .container-fluid-row,
@@ -572,19 +643,11 @@ body.is_scrolled .menu-wrapper {
   top: 14px;
 }
 
-.litecheckout .litecheckout__input:-ms-input-placeholder:not(:focus):not(:focus-within) + .litecheckout__label {
-  top: 14px;
-}
-
 .litecheckout .litecheckout__input:placeholder-shown:not(:focus):not(:focus-within) + .litecheckout__label {
   top: 14px;
 }
 
 .litecheckout .litecheckout__input:-moz-placeholder-shown:not(:focus) + .litecheckout__label, .litecheckout select:-moz-placeholder-shown:not(:focus) + .litecheckout__label {
-  left: 20px;
-}
-
-.litecheckout .litecheckout__input:-ms-input-placeholder:not(:focus) + .litecheckout__label, .litecheckout select:-ms-input-placeholder:not(:focus) + .litecheckout__label {
   left: 20px;
 }
 
@@ -652,8 +715,8 @@ body.is_scrolled .menu-wrapper {
 }
 @media screen and (max-width: 575px) {
   .cm-processing-personal-data > *,
-.cm-processing-personal-data > *:first-child,
-.cm-processing-personal-data > *:last-child {
+  .cm-processing-personal-data > *:first-child,
+  .cm-processing-personal-data > *:last-child {
     flex: 1 1 100%;
     max-width: 100%;
   }
@@ -970,7 +1033,6 @@ body.is_scrolled .menu-wrapper {
 }
 
 .ty-sort-dropdown__content {
-  min-width: -webkit-min-content;
   min-width: -moz-min-content;
   min-width: min-content;
 }
@@ -1104,6 +1166,7 @@ select:focus {
 
 .mse2_number_inputs .form-group .input-sm {
   width: 100%;
+  height: 36px;
   border: 1px solid #d9d9d9;
   padding-left: 37px;
   border-radius: 0;
@@ -1259,9 +1322,9 @@ select:focus {
   content: "";
 }
 
-.ut2-quick-view-button,
-.ut2-add-to-wish:not(.label),
-.ut2-add-to-compare:not(.label) {
+.ty-product-list .ut2-quick-view-button,
+.ty-product-list .ut2-add-to-wish:not(.label),
+.ty-product-list .ut2-add-to-compare:not(.label) {
   width: 32px;
   float: right;
   height: 32px;
@@ -1272,25 +1335,26 @@ select:focus {
   justify-content: center;
 }
 
-.ut2-quick-view-button:hover,
-.ut2-add-to-wish:not(.label):hover,
-.ut2-add-to-compare:not(.label):hover {
+.ty-product-list .ut2-quick-view-button:hover,
+.ty-product-list .ut2-add-to-wish:not(.label):hover,
+.ty-product-list .ut2-add-to-compare:not(.label):hover {
   background-color: #ffc700;
 }
 
-.ut2-quick-view-button:hover svg,
-.ut2-add-to-wish:not(.label):hover svg,
-.ut2-add-to-compare:not(.label):hover svg {
+.ty-product-list .ut2-quick-view-button:hover svg,
+.ty-product-list .ut2-add-to-wish:not(.label):hover svg,
+.ty-product-list .ut2-add-to-compare:not(.label):hover svg {
   color: #fff;
 }
 
-.ty-product-list .ut2-pl__list-buttons a:first-child {
+.ty-product-list .ut2-pl__list-buttons a:first-child,
+.ty-product-list .ut2-pl__list-buttons a:last-child {
   border-radius: 0;
 }
 
-.ut2-quick-view-button svg,
-.ut2-add-to-wish:not(.label) svg,
-.ut2-add-to-compare:not(.label) svg {
+.ty-product-list .ut2-quick-view-button svg,
+.ty-product-list .ut2-add-to-wish:not(.label) svg,
+.ty-product-list .ut2-add-to-compare:not(.label) svg {
   color: #ffc700;
   font-size: 17px;
   line-height: 18px;
@@ -1304,7 +1368,7 @@ select:focus {
   color: #fff;
 }
 
-.ut2-add-to-wish.voted {
+.ty-product-list .ut2-add-to-wish.voted {
   background-color: #ffc700;
 }
 
@@ -1312,7 +1376,7 @@ select:focus {
   color: #ffc700;
 }
 
-.ut2-add-to-wish.voted svg {
+.ty-product-list .ut2-add-to-wish.voted svg {
   color: #fff;
 }
 
@@ -1343,6 +1407,10 @@ select:focus {
   flex: 1 0 auto;
   float: none;
   max-width: 110px;
+}
+
+.ty-product-list.full-width .ut2-pl__qty {
+  margin-bottom: 20px;
 }
 
 .ut2-gl__qty > div,
@@ -1497,7 +1565,8 @@ select:focus {
   margin-bottom: 9px;
 }
 
-.ty-product-list__body .ut2-pl__btns > * {
+.ty-product-list__body .ut2-pl__btns > *,
+.ty-product-list .ty-btn {
   width: 100%;
   max-width: 100%;
 }
@@ -1761,8 +1830,8 @@ div.ui-dialog .ui-dialog-title {
   background-image: url("images/icons/cart.svg");
 }
 
-.ui-dialog[aria-describedby=content_call] .ui-dialog-title::before {
-  background-image: url("images/icons/phone.svg");
+.ui-dialog[aria-describedby=april_vinil] .ui-dialog-title::before {
+  background-image: url("images/icons/present.svg");
 }
 
 .ui-dialog[aria-describedby=modal_flash] .ui-dialog-title::before {
@@ -1798,6 +1867,10 @@ div.ui-dialog .ui-dialog-content .object-container {
   padding: 31px 43px 22px;
   overflow: hidden;
   max-width: 100%;
+}
+
+.ui-dialog[aria-describedby=april_vinil] .ui-dialog-content .object-container {
+  width: 400px;
 }
 
 div.ui-dialog .ty-control-group__title[hidden] {
@@ -1893,6 +1966,11 @@ div.ui-dialog .ui-dialog-content {
 @media screen and (min-width: 768px) {
   div.ui-dialog .ty-control-group {
     font-size: 16px;
+  }
+  .ui-dialog[aria-describedby=april_vinil] .ty-control-group {
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.5;
   }
   .ui-dialog .ty-control-group__title {
     display: inline-block;
@@ -2208,7 +2286,7 @@ body .calc-prod .ut2-pb__right {
 }
 @media screen and (max-width: 812px) {
   .ut2-pb__img-wrapper,
-.ut2-pb__right {
+  .ut2-pb__right {
     flex: 1 1 100%;
     max-width: 100%;
   }
@@ -2314,8 +2392,8 @@ body .calc-prod .ut2-pb__right {
 }
 @media (max-width: 540px) {
   .row_form_a,
-.row_form_b,
-#vopros_form textarea {
+  .row_form_b,
+  #vopros_form textarea {
     width: 100%;
   }
 }
@@ -2450,7 +2528,6 @@ a.ty-quick-view__title {
   min-height: 0;
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -2458,7 +2535,6 @@ a.ty-quick-view__title {
 .owl-carousel:not(.ty-scroller-pd).ty-scroller-list .ut2-gl__item:hover .ut2-gl__name .product-title {
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -2656,7 +2732,6 @@ a.ty-quick-view__title {
 .ab__mb_item-name {
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
 }
@@ -2935,8 +3010,8 @@ input[type=text].input-search-panel {
     padding-right: 0;
   }
   .ab__sf_cat_desc .ty-wysiwyg-content p,
-.ab__sf_cat_desc .ty-wysiwyg-content li,
-.ab__sf_cat_desc .ty-wysiwyg-content tr > * {
+  .ab__sf_cat_desc .ty-wysiwyg-content li,
+  .ab__sf_cat_desc .ty-wysiwyg-content tr > * {
     font-size: 16px;
   }
 }
@@ -3010,12 +3085,12 @@ input[type=text].input-search-panel {
     margin-top: 0;
   }
   .second-menu.second-menu-el7,
-.second-menu.second-menu-el6,
-.second-menu.second-menu-el5,
-.second-menu.second-menu-el4,
-.second-menu.second-menu-el3,
-.second-menu.second-menu-el2,
-.second-menu.second-menu-el1 {
+  .second-menu.second-menu-el6,
+  .second-menu.second-menu-el5,
+  .second-menu.second-menu-el4,
+  .second-menu.second-menu-el3,
+  .second-menu.second-menu-el2,
+  .second-menu.second-menu-el1 {
     top: 100%;
     width: 100%;
     height: 330px;
@@ -3085,11 +3160,11 @@ input[type=text].input-search-panel {
     font-size: 14px;
   }
   input[type=text],
-input[type=password],
-input[type=tel],
-input[type=number],
-textarea,
-select {
+  input[type=password],
+  input[type=tel],
+  input[type=number],
+  textarea,
+  select {
     font-size: 14px;
   }
 }
@@ -3110,7 +3185,7 @@ select {
     margin: 0;
   }
   .ty-breadcrumbs__a,
-.ty-breadcrumbs__current {
+  .ty-breadcrumbs__current {
     font-size: 12px;
   }
   .ty-breadcrumbs__slash {
@@ -3118,7 +3193,7 @@ select {
     font-size: 12px;
   }
   .ty-breadcrumbs__current,
-.ty-breadcrumbs + a.ut2-btn.hidden {
+  .ty-breadcrumbs + a.ut2-btn.hidden {
     display: inline-block;
   }
   .ut2-extra-block-title .ty-mainbox-title {
@@ -3139,17 +3214,16 @@ select {
     padding: 20px 30px;
   }
   .is_scrolled .ty-dropdown-box.ut2-filters div.ty-dropdown-box__content,
-.is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
+  .is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
     top: 59px;
   }
   .ty-dropdown-box.ut2-filters .ut2-btn-close,
-.ty-dropdown-box.ut2-categories .ut2-btn-close {
+  .ty-dropdown-box.ut2-categories .ut2-btn-close {
     top: 10px;
     right: 10px;
   }
   .ty-wysiwyg-content td,
-.ty-wysiwyg-content th {
-    min-width: -webkit-min-content;
+  .ty-wysiwyg-content th {
     min-width: -moz-min-content;
     min-width: min-content;
   }
@@ -3183,7 +3257,7 @@ select {
     margin-bottom: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
     height: 35px;
     border: none;
     padding: 0;
@@ -3192,14 +3266,14 @@ select {
     border-radius: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title.open,
-.ty-dropdown-box.ut2-filters:hover.ty-dropdown-box__title.open,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title.open,
-.ty-dropdown-box.ut2-categories:hover.ty-dropdown-box__title.open {
+  .ty-dropdown-box.ut2-filters:hover.ty-dropdown-box__title.open,
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title.open,
+  .ty-dropdown-box.ut2-categories:hover.ty-dropdown-box__title.open {
     box-shadow: none;
     background: #ffc700;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title:hover,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
     box-shadow: none;
     background: #ffc700;
   }
@@ -3216,12 +3290,12 @@ select {
     padding: 0;
   }
   .mse2_pagination,
-.ab__sf_cat_desc {
+  .ab__sf_cat_desc {
     float: none;
     width: 100%;
   }
   .ty-pagination__item,
-.ty-pagination__selected {
+  .ty-pagination__selected {
     height: 35px;
     min-width: 35px;
     line-height: 35px;
@@ -3230,7 +3304,7 @@ select {
     display: none;
   }
   .ty-pagination .ty-pagination__selected + a,
-.ty-pagination .ty-pagination__selected + a + a {
+  .ty-pagination .ty-pagination__selected + a + a {
     display: inline-block !important;
   }
   .ty-wysiwyg-content * {
@@ -3252,9 +3326,9 @@ select {
     padding-right: 35px;
   }
   .ty-subheader,
-div.ty-mainbox-title,
-.ty-footer-form-block__title,
-a.ty-quick-view__title {
+  div.ty-mainbox-title,
+  .ty-footer-form-block__title,
+  a.ty-quick-view__title {
     font-size: 20px;
   }
   .ty-tabs__content .owl-theme .owl-controls .owl-page span {
@@ -3317,8 +3391,8 @@ a.ty-quick-view__title {
     max-width: 100%;
   }
   .ty-mainbox-body .ty-wysiwyg-content table td,
-.ut2-cat-container .ty-wysiwyg-content table td,
-.ty-wysiwyg-content[class*=description]:not(.content-features) table td {
+  .ut2-cat-container .ty-wysiwyg-content table td,
+  .ty-wysiwyg-content[class*=description]:not(.content-features) table td {
     padding: 5px 10px;
   }
   .ty-wysiwyg-content * {
