--- a/redesign.scss
+++ b/redesign.scss
@@ -127,9 +127,64 @@ body.is_scrolled .menu-wrapper {
 .burger-menu {
   cursor: pointer;
 }
+.header-info .footer-img__group a svg {
+  transform: scale(1);
+  transition: transform 0.2s;
+}
+.header-info .footer-img__group a:hover svg {
+  transform: scale(1.2);
+}
 .search-btn__wrapper {
   width: 40px;
   height: 40px;
+  border: 1px solid #d9d9d9;
+  overflow: hidden;
+  position: relative;
+  transition: background-color 0.2s;
+  margin-left: -1px;
+}
+// .search-btn__wrapper:hover {
+//   background-color: var(--yellow);
+// }
+.search-btn__wrapper a {
+  transform: scale(1);
+  transition: transform 0.2s;
+}
+.search-btn__wrapper a:hover {
+  transform: scale(1.2);
+}
+.search-btn__wrapper.get-click svg {
+  color: #333;
+}
+.header-btn__sale svg {
+  left: 0;
+  color: #fff;
+  bottom: 0;
+  z-index: 1;
+  position: absolute;
+}
+.header-btn__btn {
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  background: #333;
+  transition: background-color 0.3s;
+  align-items: center;
+  justify-content: center;
+}
+.header-btn__btn:hover {
+  color: #fff;
+  background: #4b4b4b;
+}
+.header-btn__callback {
+  outline: 1px solid #d9d9d9;
+  outline-offset: 4px;
+}
+.header-btn__callback:hover {
+  animation: hoverWave linear 1s infinite;
 }
 .mobile-icon,
 .menu-icon {
@@ -169,6 +224,13 @@ body.is_scrolled .menu-wrapper {
 }
 .header .social {
   align-items: center;
+}
+.header-search__icon svg {
+  color: #FFC700;
+  transition: color 0.3s;
+}
+.header-search__icon:hover svg {
+  color: #fff;
 }
 .container-fluid-row,
 .container-fluid-row-full-width > .row-fluid {
@@ -952,6 +1014,7 @@ select:focus {
 }
 .mse2_number_inputs .form-group .input-sm {
   width: 100%;
+  height: 36px;
   border: 1px solid #d9d9d9;
   padding-left: 37px;
   border-radius: 0;
@@ -1078,9 +1141,9 @@ select:focus {
 .ut2-sorting-wrap .ty-sort-dropdown:first-child::before {
   content: "";
 }
-.ut2-quick-view-button,
-.ut2-add-to-wish:not(.label),
-.ut2-add-to-compare:not(.label) {
+.ty-product-list .ut2-quick-view-button,
+.ty-product-list .ut2-add-to-wish:not(.label),
+.ty-product-list .ut2-add-to-compare:not(.label) {
   width: 32px;
   float: right;
   height: 32px;
@@ -1090,22 +1153,23 @@ select:focus {
   align-items: center;
   justify-content: center;
 }
-.ut2-quick-view-button:hover,
-.ut2-add-to-wish:not(.label):hover,
-.ut2-add-to-compare:not(.label):hover {
+.ty-product-list .ut2-quick-view-button:hover,
+.ty-product-list .ut2-add-to-wish:not(.label):hover,
+.ty-product-list .ut2-add-to-compare:not(.label):hover {
   background-color: #ffc700;
 }
-.ut2-quick-view-button:hover svg,
-.ut2-add-to-wish:not(.label):hover svg,
-.ut2-add-to-compare:not(.label):hover svg {
+.ty-product-list .ut2-quick-view-button:hover svg,
+.ty-product-list .ut2-add-to-wish:not(.label):hover svg,
+.ty-product-list .ut2-add-to-compare:not(.label):hover svg {
   color: #fff;
 }
-.ty-product-list .ut2-pl__list-buttons a:first-child {
+.ty-product-list .ut2-pl__list-buttons a:first-child,
+.ty-product-list .ut2-pl__list-buttons a:last-child {
   border-radius: 0;
 }
-.ut2-quick-view-button svg,
-.ut2-add-to-wish:not(.label) svg,
-.ut2-add-to-compare:not(.label) svg {
+.ty-product-list .ut2-quick-view-button svg,
+.ty-product-list .ut2-add-to-wish:not(.label) svg,
+.ty-product-list .ut2-add-to-compare:not(.label) svg {
   color: #ffc700;
   font-size: 17px;
   line-height: 18px;
@@ -1116,13 +1180,13 @@ select:focus {
 .comparison.added .comparison-remove svg {
   color: #fff;
 }
-.ut2-add-to-wish.voted {
+.ty-product-list .ut2-add-to-wish.voted {
   background-color: #ffc700;
 }
 .ut2-pb__button .btns-features svg {
   color: #ffc700;
 }
-.ut2-add-to-wish.voted svg {
+.ty-product-list .ut2-add-to-wish.voted svg {
   color: #fff;
 }
 .ty-product-list__body .ty-price-update .ty-price-num {
@@ -1147,6 +1211,9 @@ select:focus {
   flex: 1 0 auto;
   float: none;
   max-width: 110px;
+}
+.ty-product-list.full-width .ut2-pl__qty {
+  margin-bottom: 20px;
 }
 .ut2-gl__qty > div,
 .ut2-pl__qty > div {
@@ -1274,7 +1341,8 @@ select:focus {
 .ty-product-list .ut2-pl__item-name {
   margin-bottom: 9px;
 }
-.ty-product-list__body .ut2-pl__btns > * {
+.ty-product-list__body .ut2-pl__btns > *,
+.ty-product-list .ty-btn {
   width: 100%;
   max-width: 100%;
 }
@@ -1539,8 +1607,8 @@ div.ui-dialog .ui-dialog-title {
 .ui-dialog[aria-describedby="one_click"] .ui-dialog-title::before {
   background-image: url("images/icons/cart.svg");
 }
-.ui-dialog[aria-describedby="content_call"] .ui-dialog-title::before {
-  background-image: url("images/icons/phone.svg");
+.ui-dialog[aria-describedby="april_vinil"] .ui-dialog-title::before {
+  background-image: url("images/icons/present.svg");
 }
 .ui-dialog[aria-describedby="modal_flash"] .ui-dialog-title::before {
   background-image: url("images/icons/present.svg");
@@ -1576,6 +1644,9 @@ div.ui-dialog .ui-dialog-content .object-container {
   padding: 31px 43px 22px;
   overflow: hidden;
   max-width: 100%;
+}
+.ui-dialog[aria-describedby="april_vinil"] .ui-dialog-content .object-container {
+  width: 400px;
 }
 div.ui-dialog .ty-control-group__title[hidden] {
   display: none;
@@ -1655,6 +1726,11 @@ div.ui-dialog .ui-dialog-content {
 @media screen and (min-width: 768px) {
   div.ui-dialog .ty-control-group {
     font-size: 16px;
+  }
+  .ui-dialog[aria-describedby="april_vinil"] .ty-control-group {
+    font-size: 18px;
+    text-align: center;
+    line-height: 1.5;
   }
   .ui-dialog .ty-control-group__title {
     display: inline-block;
