--- a/redesign.scss
+++ b/redesign.scss
@@ -1,3 +1,8 @@
+@import "assets/templates/vmetre/css/style";
+@import "assets/templates/vmetre/css/dop";
+@import "assets/templates/new/dop";
+@import "assets/templates/new/styles";
+
 @font-face {
   font-display: swap;
   font-family: "Montserrat";
