--- a/assets/templates/new/minified_inner.css
+++ b/assets/templates/new/minified_inner.css
@@ -19050,7 +19050,6 @@ div[class^=span].side-grid .ty-product-list .ut2-pl__info {
   .ut2-gl__buttons .ut2-add-to-compare:not(.label),
   .ut2-gl__buttons .ut2-add-to-wish:not(.label) {
     background-color: transparent;
-    box-shadow: none;
   }
   .ut2-gl__buttons .ut2-add-to-compare:not(.label) i,
   .ut2-gl__buttons .ut2-add-to-wish:not(.label) i {
@@ -25858,6 +25857,10 @@ select:focus {
   padding-left: 15px;
 }
 
+.ty-product-list .stock-wrap .ty-control-group__item span {
+  display: inline;
+}
+
 .ty-product-list .stock-wrap .ty-control-group__item i::before {
   content: "";
 }
@@ -26826,6 +26829,7 @@ a.ty-quick-view__title {
 
 .owl-theme .owl-controls .owl-page {
   width: 11.1111%;
+  display: inline-block;
 }
 
 .ty-tabs__content .owl-theme .owl-controls .owl-page span {
@@ -26846,6 +26850,7 @@ a.ty-quick-view__title {
 
 .span16 > .ty-tabs__content .owl-controls {
   margin-top: 44px;
+  text-align: center;
 }
 
 /** standalone **/
