--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -1804,6 +1804,10 @@ select:focus {
   padding-left: 15px;
 }
 
+.ty-product-list .stock-wrap .ty-control-group__item span {
+  display: inline;
+}
+
 .ty-product-list .stock-wrap .ty-control-group__item i::before {
   content: "";
 }
@@ -2772,6 +2776,7 @@ a.ty-quick-view__title {
 
 .owl-theme .owl-controls .owl-page {
   width: 11.1111%;
+  display: inline-block;
 }
 
 .ty-tabs__content .owl-theme .owl-controls .owl-page span {
@@ -2792,6 +2797,7 @@ a.ty-quick-view__title {
 
 .span16 > .ty-tabs__content .owl-controls {
   margin-top: 44px;
+  text-align: center;
 }
 
 /** standalone **/
