75445 - jGrowl message color

--- a/assets/templates/new/minified_inner.css
+++ b/assets/templates/new/minified_inner.css
@@ -21780,6 +21780,10 @@ body .calc-prod .ty-product-prices > *:last-child {
   }
 }
 /* <<<<< */
+.jGrowl .jGrowl-message {
+  color: #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
